# options-pricing-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_options_chain.csv
docs/: NOTES.md  RESOURCES.md  ROADMAP.md
examples/: plot_surface.py  price_option.py
src/options_pricing/: __init__.py  binomial.py  black_scholes.py  greeks.py  implied_vol.py  market_data.py  monte_carlo.py  surface.py  validation.py
tests/: conftest.py  reference_values.py  test_binomial.py  test_black_scholes.py  test_greeks.py  test_implied_vol.py  test_market_data.py  test_monte_carlo.py  test_surface.py
